# cover-maker

./: .coverage  .env.example  .gitignore  AGENTS.md  README.md  devbcn-speakers 2024.js  devbcn-speakers-2025.js  devbcn-speakers-2025.ts  devbcn-speakers.js  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: generate-cards.yml
docs/: pipeline.md
src/: api_client.py  gdrive_uploader.py  generate_cards.py  image_processor.py  models.py
tests/: conftest.py  test_api_client.py  test_gdrive_uploader.py  test_generate_cards.py  test_image_processor.py
